# codePontedera

./: CMakeLists.txt  PontederaROM.cpp  offlinePreprocessing.py
